Added sidebar headers before the lists

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 // Used in backgrounds
 $col-background-red: #c04039;
+$col-background-red-darker: #a02019;
 
 // Used for backgroud color of foreground eles, like buttons
 $col-red: #ff4a3d;
